FIX: selected nav inner menus are not showing properly

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -11,7 +11,7 @@
 			background-color: $header_background;
 		}
 
-		&.active > a {
+		&.active > a, > a.active {
 			background-color: $quaternary;
 		}
 	} 
